<?xml version="1.0"?>
<package format="2">
  <name>pcl_ros</name>
  <version>1.7.2</version>
  <description>

  PCL (Point Cloud Library) ROS interface stack. PCL-ROS is the preferred
  bridge for 3D applications involving n-D Point Clouds and 3D geometry
  processing in ROS.

  </description>

  <author>Open Perception</author>
  <author email="julius@kammerl.de">Julius Kammerl</author>
  <author email="william@osrfoundation.org">William Woodall</author>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/perception_pcl</url>
  <url type="bugtracker">https://github.com/ros-perception/perception_pcl/issues</url>
  <url type="repository">https://github.com/ros-perception/perception_pcl</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roslib</build_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>nodelet_topic_tools</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>

  <test_depend>rostest</test_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_features.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_filters.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_io.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_segmentation.xml"/>
    <nodelet plugin="${prefix}/plugins/nodelet/libpcl_ros_surface.xml"/>
  </export>

</package>
