<package>
  <name>perception_pcl</name>
  <version>1.0.17</version>
  <description>
<p>
  PCL (Point Cloud Library) ROS interface stack. PCL-ROS is the preferred
  bridge for 3D applications involving n-D Point Clouds and 3D geometry
  processing in ROS.
</p>
  </description>
  <author>Open Perception</author>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <license>BSD</license>  
  <url>http://ros.org/wiki/perception_pcl</url>

  <build_depend>catkin</build_depend>

  <run_depend>pcl_ros</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
