<package>
  <name>perception_pcl</name>
  <version>1.1.7</version>
  <description>

  PCL (Point Cloud Library) ROS interface stack. PCL-ROS is the preferred
  bridge for 3D applications involving n-D Point Clouds and 3D geometry
  processing in ROS.

  </description>
  <author>Open Perception</author>
  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
  <maintainer email="julius@kammerl.de">Julius Kammerl</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/perception_pcl</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
